<resources>
    <string name="action_settings">Settings</string>
    <string name="action_dialpad">Dialpad</string>
    <string name="action_contact_details">Contact details</string>
    <string name="pref_advanced_options">Advanced</string>
    <string name="pref_send_crash_reports">Send crash reports</string>
    <string name="pref_never_send_crash_summary">By sending in stack traces you are helping the development</string>
    <string name="pref_confirm_messages">Confirm Messages</string>
    <string name="pref_confirm_messages_summary">Let your contacts know when you have received and read their messages</string>
    <string name="pref_ui_options">UI</string>
    <string name="pref_allow_message_correction">Message correction</string>
    <string name="pref_allow_message_correction_summary">Allow your contacts to retroactively edit their messages</string>
    <string name="pref_create_backup">Create backup</string>
    <string name="pref_create_backup_summary">Backup files will be stored in %s</string>
    <string name="remove_from_room">Remove from group chat</string>
    <string name="pref_chat_states">Typing notifications</string>
    <string name="pref_chat_states_summary">Let your contacts know when you are writing messages to them</string>
    <string name="pref_remove_trusted_certificates_title">Remove certificates</string>
    <string name="pref_remove_trusted_certificates_summary">Delete manually approved certificates</string>
    <string name="send_private_message">Send private message</string>
    <string name="pref_presence_settings">Availability</string>
    <string name="pref_away_when_screen_off">Away when device is locked</string>
    <string name="pref_away_when_screen_off_summary">Show as Away when the device is locked</string>
    <string name="pref_dnd_on_silent_mode">Busy in silent mode</string>
    <string name="pref_dnd_on_silent_mode_summary">Show as Busy when device is in silent mode</string>
    <string name="pref_treat_vibrate_as_silent">Treat vibrate as silent mode</string>
    <string name="pref_treat_vibrate_as_dnd_summary">Show as Busy when device is on vibrate</string>
    <string name="pref_show_connection_options">Hostname &amp; Port</string>
    <string name="pref_show_connection_options_summary">Show extended connection settings when setting up an account</string>
    <string name="pref_use_tor">Connect via Tor</string>
    <string name="pref_use_tor_summary">Tunnel all connections through the Tor network. Requires Orbot</string>
    <string name="pref_picture_compression">Image Compression</string>
    <string name="pref_manually_change_presence">Manage availability manually</string>
    <string name="pref_manually_change_presence_summary">Set your availability when editing your status message.</string>
    <string name="invite_again">Invite again</string>
    <string name="pref_broadcast_last_activity">Last seen</string>
    <string name="pref_blind_trust_before_verification">Blind Trust Before Verification</string>
    <string name="pref_blind_trust_before_verification_summary">Trust new devices from non-verified contacts, but prompt manual confirmation of new devices for verified contacts.</string>
    <string name="pref_automatically_delete_messages">Automatic message deletion</string>
    <string name="pref_automatically_delete_messages_description">Automatically delete messages from this device that are older than the configured time frame.</string>
    <string name="pref_omemo_setting">OMEMO Encryption</string>
    <string name="pref_omemo_setting_summary_default_on">OMEMO will be used by default for new chats.</string>
    <string name="pref_video_compression">Video Quality</string>
    <string name="manage_permission">Manage privileges</string>
    <string name="group_chats_and_channels"><![CDATA[Group Chats & Channels]]></string>
    <string name="pref_channel_discovery_summary">Most users should choose ‘jabber.network’ for better suggestions from the entirety of the public XMPP ecosystem.</string>
    <string name="pref_channel_discovery">Channel discovery method</string>
    <string name="pref_send_link_previews">Send link previews</string>
    <string name="pref_send_link_previews_summary">Attach metadata about links when sending a message</string>
    <string name="start_chat">Start chat</string>
    <string name="pref_category_sending">Sending</string>
    <string name="pref_category_receiving">Receiving</string>
    <string name="pref_automatic_download">Automatic download</string>
    <string name="pref_category_e2ee">End-to-end encryption</string>
    <string name="pref_title_trust_system_ca_store">Certificate authorities</string>
    <string name="pref_title_trust_system_ca_store_summary">Trust the system’s CA certificates</string>
    <string name="detect_mim">Require channel binding</string>
    <string name="detect_mim_summary">WARNING: Will break your connection if not supported by your server</string>
    <string name="pref_category_server_connection">Server connection</string>
    <string name="pref_category_engagement_notifications">Engagement notifications</string>
    <string name="pref_category_application">Application</string>
    <string name="pref_category_interaction">Interaction</string>
    <string name="pref_category_on_this_device">On device</string>
    <string name="pref_create_backup_one_off_summary">Create one-off backup</string>
    <string name="pref_backup_recurring">Recurring backup</string>
    <string name="show_avatar">Show avatar</string>
    <string name="block_avatar">Block avatar</string>
    <string name="store_media_only_in_cache">Store media in internal hidden storage</string>
    <string name="pref_show_mappreview_inside">Show maps preview</string>
    <string name="pref_show_mappreview_inside_summary">Show map previews directly inside the chat view, a connection to the monocles-Server will be established.</string>
    <string name="internal_meda_viewer_title">Internal media viewer</string>
    <string name="internal_meda_viewer_summary">Use internal media viewer to open image or video files inside monocles chat</string>
    <string name="pref_enable_otr_summary">Enable OTR encryption for message encryption. OTR is still highly unstable, please only use it if you know what you do.</string>
    <string name="pref_enable_otr">Enable OTR encryption (BETA)</string>
    <string name="update_default_stickers">Update default stickers</string>
    <string name="pref_broadcast_last_activity_summary">Allow contacts to see when you were last active in the app</string>
    <string name="pref_enforce_dane_summary">Only connect an account when successfully verified DANE</string>
    <string name="pref_enforce_dane">Enforce DANE</string>
    <string name="mute_locally">Mute locally</string>
    <string name="unmute_locally">Unmute locally</string>
    <string name="invite_to_start_chat">Invite to start chat</string>
    <string name="pref_dns_server_ipv4_summary">Add a custom IPv4 DNS server. Empty the field to use the DNS server of your device or VPN</string>
    <string name="pref_dns_server_ipv4_title">IPv4 DNS server</string>
    <string name="pref_dns_server_ipv6_title">IPv6 DNS server</string>
    <string name="pref_dns_server_ipv6_summary">Add a custom IPv6 DNS server. Empty the field to use the DNS server of your device or VPN</string>
    <string name="pref_reset_dns_server_summary">Reset the custom DNS servers to the Android systems DNS server</string>
    <string name="pref_reset_dns_server_title">Reset DNS</string>
    <string name="pref_category_settings">Settings</string>
    <string name="pref_import_settings">Import settings</string>
    <string name="pref_import_settings_summary">Import the settings.dat from the backup folder</string>
    <string name="pref_export_settings">Export settings</string>
    <string name="pref_export_settings_summary">Export the monocles chat app settings to the backup folder</string>
    <string name="clear_blocked_media">Clear blocked media</string>
    <string name="voice_message_codec">Voice message codec</string>
    <string name="always_accept_when_unmetered">Always accept when unmetered</string>
    <string name="pref_auto_accept_unmetered_summary">Don\'t use the above size limit on unmetered networks</string>
    <string name="pref_export">Export Data (experimental)</string>
    <string name="pref_export_summary">Export data useful for importing into another app. Not a full backup.</string>
    <string name="pref_create_backup_warning">Full backups are meant for restore after a device loss, or for migrating to a new device. You cannot restore a backup to another app while still being connected with this one!</string>
    <string name="pref_app_lock_enable_title">Enable app lock</string>
    <string name="pref_app_lock_enable_summary">App lock — prevents casual access to the app UI. Does not protect your data from attackers with device access; use Database Password for that.</string>
    <string name="pref_hide_media_title">Hide media in gallery</string>
    <string name="pref_hide_media_summary">Hide received and sent media from system gallery views</string>
    <string name="pref_secure_tls_summary">Use only securest TLS ciphers if available on server</string>
    <string name="pref_secure_tls">Use securest TLS ciphers only</string>
    <string name="pref_prefer_ipv6_summary">Prefers IPv6 when connecting</string>
    <string name="pref_prefer_ipv6">Prefer IPv6</string>
    <string name="pref_export_plain_text_logs">Export plain text</string>
    <string name="pref_export_plain_text_logs_summary">Export messages unencrypted in human readable plain text</string>
    <string name="pref_allow_unencrypted_reactions">Reactions in E2EE chats</string>
    <string name="pref_allow_unencrypted_reactions_summary">Allow using unencrypted reactions in end-to-end encrypted chats</string>
    <string name="pref_store_media_in_cache">Default system wide to store media in internal and hidden storage.</string>
    <string name="pref_disable_reactions_fallback_summary">Disables the fallback of reactions for clients that don\'t support reactions yet</string>
    <string name="pref_disable_reactions_fallback_title">Disable reactions fallback</string>
    <string name="pref_load_providers_list_external">Load external chat providers</string>
    <string name="pref_load_providers_list_external_summary">Load a list of chat providers from the xmpp.net server for alternative in-app registration</string>
    <string name="pref_use_i2p">Connect via I2P</string>
    <string name="pref_use_i2p_summary">Tunnel all connections through the I2P network. Requires I2P client</string>
    <string name="pref_load_image_from_any_link_title">Load image links</string>
    <string name="pref_load_image_from_any_link_summary">Automatically loads images from any image link</string>
    <string name="pref_backup_location">Backup location</string>
    <string name="import_own_stickers">Import stickers</string>
    <string name="import_own_stickers_summary">Import your own stickers. Use them with the original filename.</string>
    <string name="import_own_gifs">Import own GIFs</string>
    <string name="import_own_gifs_summary">Import your own GIFs. They will be sorted by the filename.</string>
    <string name="pref_now_playing">Now Playing</string>
    <string name="pref_send_now_playing">Send now playing status</string>
    <string name="pref_auto_update_now_playing">Automatically update now playing status from system (Requires notification listener permission)</string>
    <string name="pref_update_track_longer_than">Only update tracks longer than</string>
    <string name="pref_custom_resource_name">Custom client resource name</string>
    <string name="pref_custom_resource_name_summary">Set a custom name for your client\'s resource</string>
    <string name="pref_custom_resource_name_dialog_title">Enter custom resource name</string>
</resources>