<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/pref_category_engagement_notifications">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/confirm_messages"
            android:icon="@drawable/ic_done_all_24dp"
            android:key="confirm_messages"
            android:summary="@string/pref_confirm_messages_summary"
            android:title="@string/pref_confirm_messages" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/chat_states"
            android:icon="@drawable/ic_keyboard_24dp"
            android:key="chat_states"
            android:summary="@string/pref_chat_states_summary"
            android:title="@string/pref_chat_states" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/last_activity"
            android:key="last_activity"
            android:icon="@drawable/ic_visibility_24dp"
            android:summary="@string/pref_broadcast_last_activity_summary"
            android:title="@string/pref_broadcast_last_activity" />
        <EditTextPreference
            app:key="custom_resource_name"
            android:icon="@drawable/monocleslogo_chat_signet"
            app:title="@string/pref_custom_resource_name"
            app:summary="@string/pref_custom_resource_name_summary"
            app:dialogTitle="@string/pref_custom_resource_name_dialog_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_interaction">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/allow_message_correction"
            android:icon="@drawable/ic_edit_24dp"
            android:key="allow_message_correction"
            android:summary="@string/pref_allow_message_correction_summary"
            android:title="@string/pref_allow_message_correction" />

        <SwitchPreferenceCompat
            android:defaultValue="@bool/allow_unencrypted_reactions"
            android:icon="@drawable/outline_emoji_emotions_24"
            android:key="allow_unencrypted_reactions"
            android:summary="@string/pref_allow_unencrypted_reactions_summary"
            android:title="@string/pref_allow_unencrypted_reactions" />

        <SwitchPreferenceCompat
            android:defaultValue="@bool/disable_reactions_fallback"
            android:icon="@drawable/ic_add_reaction_24dp"
            android:key="disable_reactions_fallback"
            android:summary="@string/pref_disable_reactions_fallback_summary"
            android:title="@string/pref_disable_reactions_fallback_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_ui_options">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/send_link_previews"
            android:icon="@drawable/rounded_link_24"
            android:key="send_link_previews"
            android:summary="@string/pref_send_link_previews_summary"
            android:title="@string/pref_send_link_previews" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/show_maps_inside"
            android:icon="@drawable/ic_location_pin_24dp"
            android:disableDependentsState="false"
            android:key="show_maps_inside"
            android:summary="@string/pref_show_mappreview_inside_summary"
            android:title="@string/pref_show_mappreview_inside" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/load_image_from_any_link"
            android:icon="@drawable/ic_image_24dp"
            android:key="load_image_from_any_link"
            android:summary="@string/pref_load_image_from_any_link_summary"
            android:title="@string/pref_load_image_from_any_link_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_presence_settings">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/manually_change_presence"
            android:disableDependentsState="true"
            android:icon="@drawable/rounded_info_24"
            android:key="manually_change_presence"
            android:summary="@string/pref_manually_change_presence_summary"
            android:title="@string/pref_manually_change_presence" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/away_when_screen_off"
            android:dependency="manually_change_presence"
            android:icon="@drawable/ic_screen_lock_portrait_24dp"
            android:key="away_when_screen_off"
            android:summary="@string/pref_away_when_screen_off_summary"
            android:title="@string/pref_away_when_screen_off" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/dnd_on_silent_mode"
            android:dependency="manually_change_presence"
            android:icon="@drawable/ic_do_not_disturb_on_24dp"
            android:key="dnd_on_silent_mode"
            android:summary="@string/pref_dnd_on_silent_mode_summary"
            android:title="@string/pref_dnd_on_silent_mode" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/treat_vibrate_as_silent"
            android:dependency="dnd_on_silent_mode"
            android:icon="@drawable/ic_vibration_24dp"
            android:key="treat_vibrate_as_silent"
            android:summary="@string/pref_treat_vibrate_as_dnd_summary"
            android:title="@string/pref_treat_vibrate_as_silent" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_now_playing">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:icon="@drawable/rounded_play_arrow_36"
            android:key="load_now_playing_from_system"
            android:title="@string/pref_send_now_playing"
            android:summary="@string/pref_auto_update_now_playing" />

        <ListPreference
            android:defaultValue="@integer/update_track_longer_than_secs"
            android:key="update_track_longer_than"
            android:title="@string/pref_update_track_longer_than"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory android:key="category_application" android:title="@string/pref_category_application">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/send_crash_reports"
            android:icon="@drawable/ic_report_24dp"
            android:key="send_crash_reports"
            android:summary="@string/pref_never_send_crash_summary"
            android:title="@string/pref_send_crash_reports" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/load_providers_list_external"
            android:icon="@drawable/xmpp_providers"
            android:key="load_providers_list_external"
            android:summary="@string/pref_load_providers_list_external_summary"
            android:title="@string/pref_load_providers_list_external" />

    </PreferenceCategory>

</PreferenceScreen>
