<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="backup_warning"
        android:summary="@string/pref_create_backup_warning" />

    <ListPreference
        android:defaultValue="@integer/automatic_backup"
        android:icon="@drawable/ic_calendar_month_24dp"
        android:key="recurring_backup"
        android:title="@string/pref_backup_recurring" />

    <Preference
        android:icon="@drawable/ic_archive_24dp"
        android:key="create_one_off_backup"
        android:summary="@string/pref_create_backup_one_off_summary"
        android:title="@string/pref_create_backup" />

    <Preference
        android:icon="@drawable/ic_archive_24dp"
        android:key="export"
        android:summary="@string/pref_export_summary"
        android:title="@string/pref_export" />

    <Preference
        android:icon="@drawable/ic_folder_open_24dp"
        android:key="backup_location"
        android:summary="@string/pref_create_backup_summary"
        android:title="@string/pref_backup_location" />

    <SwitchPreferenceCompat
        android:defaultValue="@bool/plain_text_logs"
        android:icon="@drawable/outline_article_24"
        android:key="export_plain_text_logs"
        android:summary="@string/pref_export_plain_text_logs_summary"
        android:title="@string/pref_export_plain_text_logs" />

    <PreferenceCategory
        android:title="@string/pref_category_settings">
        <Preference
            android:icon="@drawable/rounded_settings_backup_restore_24"
            android:key="import_settings"
            android:summary="@string/pref_import_settings_summary"
            android:title="@string/pref_import_settings" />
        <Preference
            android:icon="@drawable/rounded_settings_b_roll_24"
            android:key="export_settings"
            android:summary="@string/pref_export_settings_summary"
            android:title="@string/pref_export_settings" />
    </PreferenceCategory>

</PreferenceScreen>