<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category_e2ee">
        <ListPreference
            android:defaultValue="@string/omemo_setting_default"
            android:entries="@array/omemo_setting_entries"
            android:entryValues="@array/omemo_setting_entry_values"
            android:icon="@drawable/ic_lock_24dp"
            android:key="omemo"
            android:summary="@string/pref_omemo_setting_summary_default_on"
            android:title="@string/pref_omemo_setting" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/btbv"
            android:icon="@drawable/ic_verified_user_24dp"
            android:key="btbv"
            android:summary="@string/pref_blind_trust_before_verification_summary"
            android:title="@string/pref_blind_trust_before_verification" />

        <SwitchPreferenceCompat
            android:defaultValue="@bool/enable_otr"
            android:icon="@drawable/ic_lock_24dp"
            android:key="enable_otr_encryption"
            android:summary="@string/pref_enable_otr_summary"
            android:title="@string/pref_enable_otr" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_server_connection">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/enforce_dane"
            android:icon="@drawable/shield_verified_big"
            android:key="enforce_dane"
            android:summary="@string/pref_enforce_dane_summary"
            android:title="@string/pref_enforce_dane" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/secure_tls"
            android:icon="@drawable/ic_private_connectivity_24dp"
            android:key="secure_tls"
            android:summary="@string/pref_secure_tls_summary"
            android:title="@string/pref_secure_tls" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/trust_system_ca_store"
            android:icon="@drawable/ic_assured_workload_24dp"
            android:key="trust_system_ca_store"
            android:summary="@string/pref_title_trust_system_ca_store_summary"
            android:title="@string/pref_title_trust_system_ca_store" />
        <Preference
            android:key="remove_trusted_certificates"
            android:icon="@drawable/ic_delete_24dp"
            android:summary="@string/pref_remove_trusted_certificates_summary"
            android:title="@string/pref_remove_trusted_certificates_title" />

        <SwitchPreferenceCompat
            android:defaultValue="@bool/require_channel_binding"
            android:icon="@drawable/ic_private_connectivity_24dp"
            android:key="channel_binding_required"
            android:summary="@string/detect_mim_summary"
            android:title="@string/detect_mim" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_on_this_device">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/app_lock_enabled"
            android:key="app_lock_enabled"
            android:icon="@drawable/ic_lock_24dp"
            android:summary="@string/pref_app_lock_enable_summary"
            android:title="@string/pref_app_lock_enable_title" />
        <ListPreference
            android:defaultValue="@integer/automatic_message_deletion"
            android:icon="@drawable/ic_auto_delete_24dp"
            android:key="automatic_message_deletion"
            android:summary="@string/pref_automatically_delete_messages_description"
            android:title="@string/pref_automatically_delete_messages" />
    </PreferenceCategory>

</PreferenceScreen>