<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/start_conversation"
        android:title="@string/start_chat"
        android:visible="false" />
    <item
        android:id="@+id/action_show_avatar"
        android:title="@string/show_avatar"
        android:visible="false" />
    <item
        android:id="@+id/action_contact_details"
        android:title="@string/action_contact_details"
        android:visible="false" />
    <item
        android:id="@+id/action_block_avatar"
        android:title="@string/block_avatar"
        android:visible="false" />
    <item
        android:id="@+id/action_mute_participant"
        android:title="@string/mute_locally"
        android:visible="false" />
    <item
        android:id="@+id/action_unmute_participant"
        android:title="@string/unmute_locally"
        android:visible="false" />
    <item
        android:id="@+id/invite"
        android:title="@string/invite_again"
        android:visible="false" />
    <item
        android:id="@+id/send_private_message"
        android:title="@string/send_private_message"
        android:visible="false" />
    <item
        android:id="@+id/share_contact_details"
        android:title="@string/invite_to_start_chat"
        android:visible="false" />
    <item
        android:id="@+id/manage_permissions"
        android:title="@string/manage_permission"
        android:visible="false" />
    <item
        android:id="@+id/remove_from_room"
        android:title="@string/remove_from_room"
        android:visible="false" />
</menu>
